2001-12-03  Steve Youngs  <youngs@xemacs.org>

	* package-get.el (package-get-update-base-from-buffer): Add
	autoload for 'mc-verify'.

2001-12-02  Steve Youngs  <youngs@xemacs.org>

	* package-get.el (package-get-base-filename): Rename default file
	to 'package-index.LATEST.gpg'
	(package-get-require-signed-base-updates): Update doc string.

2001-11-29  Steve Youngs  <youngs@xemacs.org>

	* package-get.el (package-entries-are-signed): New.
	(package-get-continue-update-base): New.
	(package-get-update-base-from-buffer): Use them.  Fix PGP code. 

2001-11-29  Adrian Aichner  <adrian@xemacs.org>

	* menubar-items.el (Menubar-items-truncate-list): Removed.
	* menubar-items.el (Menubar-items-truncate-history): New.
	* menubar-items.el (default-menubar): Use
	Menubar-items-truncate-history.

2001-11-28  Steve Youngs  <youngs@xemacs.org>

	* package-get.el (package-get-locate-index-file): Also search the
	core etc/ directory for the package index file if it can't be
	found in ~/.xemacs/.

2001-10-29  Andy Piper  <andy@xemacs.org>

	* code-files.el (toggle-buffer-file-coding-system): mark buffer as
	modified when changing coding system.

	* toolbar-items.el (toolbar-dired): Use interactive "D" spec so
	that we invoke the GUI directory selector.

2001-10-25  Andy Piper  <andy@xemacs.org>

	* dialog.el (make-dialog-box): use new directory dialog support.
	* minibuf.el (read-file-name-1): ditto.
	(read-file-name): ditto.
	(read-directory-name): ditto.

2001-09-28  Ben Wing  <ben@xemacs.org>

	* font-lock.el:
	* font-lock.el (font-lock-after-change-function):
	fix problem with last patch, reported by Katsumi Yamaoka.

2001-09-17  Ben Wing  <ben@xemacs.org>

	* font-lock.el (font-lock-after-change-function):
	fix problem when you insert a comment on the line before a line of
	code: if we use the following char, then when you hit backspace,
	the following line of code turns the comment color.

2001-09-15   Edward M. Lee  <tailbert@yahoo.com>
