@@ -443,11 +443,11 @@ used interactively, for example from a mail or news buffer."
 		(setq package-get-continue-update-base nil)
 		(autoload 'mc-setversion "mc-setversion")
 		(or
-		 (cond ((locate-file "gpg" exec-path)
+		 (cond ((locate-file "gpg" exec-path exec-suffix-list)
 			(mc-setversion "gpg"))
-		       ((locate-file "pgpe" exec-path)
+		       ((locate-file "pgpe" exec-path exec-suffix-list)
 			(mc-setversion "5.0"))
-		       ((locate-file "pgp" exec-path)
+		       ((locate-file "pgp" exec-path exec-suffix-list)
 			(mc-setversion "2.6")))
 		 (error "Can't find a suitable pgp executable"))
 		(autoload 'mc-verify "mc-toplev")
